변경 없는 경우 변경 없다는 메세지 출력

--- a/.github/workflows/rss.yml
+++ b/.github/workflows/rss.yml
@@ -30,10 +30,13 @@ jobs:
           git config user.name github-actions
           git config user.email github-actions@github.com
           git add rss.xml
+
+          echo "🕒 현재 시간: $(date '+%Y-%m-%d %H:%M:%S')"
+
           if ! git diff --cached --quiet; then
+            echo "📦 변경 사항 감지됨 – 커밋 및 푸시 진행"
             git commit -m "Update RSS feed"
             git push
           else
-            echo "No changes in rss.xml – skipping commit."
+            echo "✅ 변경 없음 – 커밋/푸시 생략"
           fi
-
